# Latex-Rust

./: Cargo.toml  README.md  build.sh
.cargo_home/: .global-cache
.cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: fontdue-0.8.0.crate
.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/cl/ap/: clap  clap_builder
.cargo_home/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/fo/nt/: fontdue
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/fontdue-0.8.0/: .cargo_vcs_info.json  Cargo.toml
benches/: render_bench.rs
fonts/: latinmodern-math.otf.b64  latinmodern-math.woff2.b64
src/: config.rs  error.rs  ffi.rs  init.rs  layout.rs  lib.rs  render.rs
src/ast/: mod.rs
src/parse/: lexer.rs  mod.rs
src/parse/rules/: basic.rs  decorations.rs  delimiters.rs  environments.rs  fractions.rs  functions.rs  matrix.rs  mod.rs  operators.rs  roots.rs  spacing.rs  styles.rs  symbols.rs
