[package]
name = "formula_render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19"
rayon = "1.8"
fontdue = "0.8"
thiserror = "1.0"
usvg = { version = "0.36", features = ["text"] }
resvg = "0.36"
sha2 = "0.10"
phf = { version = "0.11", features = ["macros"] }
jemallocator = "0.5"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false
